--- a/products/health/details.html
+++ b/products/health/details.html
@@ -121,10 +121,48 @@
 
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
+                <!-- //TEST ONLY -->
+                <div class="row">
+                    <div class="col">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart
+                            (<span class="total-count"></span>)</button><button class="clear-cart btn btn-danger">Clear
+                            Cart</button></div>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="cart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Cart</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <table class="show-cart table">
 
+                                </table>
+                                <div>Total price: P<span class="total-cart"></span></div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Order now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- partial -->
+                <!-- //TEST ONLY -->
             </div>
         </div>
     </div>
+
+    <!-- BTN -->
+    <button id="sticky" class="btn rfbtn text-white mt-3 add-to-cart" style="z-index: 5;">
+        Add to Cart
+    </button>
+    <!-- BTN -->
 
     <!-- INQUIRE BUTTON -->
     <!-- <div id="fundInqBtnSet"></div>
@@ -145,6 +183,8 @@
 
     <script src="./parser.js"></script>
     <script src="../../dependencies/lazysizes.min.js"></script>
+
+    <script src="../../cart/addToCart.js"></script>
 
     <!-- share on texthighlight -->
     <script src="../../dependencies/sharect/sharect.js"></script>
