--- a/cart/cart.html
+++ b/cart/cart.html
@@ -10,16 +10,16 @@
 	<title>
 		Maxicare Prepaid Health Cards
 	</title>
-	<link rel="icon" href="../../img/favicon.png" type="image/png" sizes="16x20" />
-	<link rel="stylesheet" href="../../dependencies/bootstrap.min.css" />
-	<link rel="stylesheet" src="../../styles/style.css" href="../../styles/style.css" />
-	<script type="text/javascript" src="../../dependencies/jquery.min.js"></script>
+	<link rel="icon" href="../img/favicon.png" type="image/png" sizes="16x20" />
+	<link rel="stylesheet" href="../dependencies/bootstrap.min.css" />
+	<link rel="stylesheet" src="../styles/style.css" href="../../styles/style.css" />
+	<script type="text/javascript" src="../dependencies/jquery.min.js"></script>
 </head>
 
 <body data-instant-intensity="viewport">
 	<!-- navbar -->
 	<div id="navbarSet"></div>
-	<script src="../../components/navbar.js"></script>
+	<script src="../components/navbar.js"></script>
 	<!-- navbar -->
 
 	<div class="container px-3">
@@ -37,7 +37,7 @@
 		<!-- social share addthis -->
 		<!-- share via QR Code -->
 		<div id="shareQR"></div>
-		<script src="../../components/shareQR.js"></script>
+		<script src="../components/shareQR.js"></script>
 		<!-- share via QR Code -->
 
 		<!-- //Cart -->
@@ -59,35 +59,30 @@
 
 	<!-- footer -->
 	<div id="footer"></div>
-	<script src="../../components/footer.js"></script>
+	<script src="../components/footer.js"></script>
 	<!-- footer -->
 
-	<script src="../../js/validator.js"></script>
-	<script src="../../js/tagIdentify.js"></script>
 	<script src="../../dependencies/lazysizes.min.js"></script>
 
 	<!-- cookie consent -->
 	<div id="cookieconsent"></div>
-	<link rel="stylesheet" href="../../dependencies/cookieconsent.min.css" />
-	<script src="../../dependencies/cookieconsent.min.js"></script>
-	<script src="../../js/cookieconsent.js"></script>
+	<link rel="stylesheet" href="../dependencies/cookieconsent.min.css" />
+	<script src="../dependencies/cookieconsent.min.js"></script>
+	<script src="../js/cookieconsent.js"></script>
 	<!-- cookie consent -->
 
-	<script src="../../cart/addToCart.js"></script>
+	<script src="../cart/addToCart.js"></script>
 
 
 	<!-- share on texthighlight -->
-	<script src="../../dependencies/sharect/sharect.js"></script>
-	<script src="../../dependencies/sharect/sharectconfig.js"></script>
+	<script src="../dependencies/sharect/sharect.js"></script>
+	<script src="../dependencies/sharect/sharectconfig.js"></script>
 	<!-- share on texthighlight -->
 
-	<script src="../../dependencies/popper.min.js"></script>
-	<script src="../../dependencies/bootstrap.min.js"></script>
+	<script src="../dependencies/popper.min.js"></script>
+	<script src="../dependencies/bootstrap.min.js"></script>
 	<script src="//instant.page/5.1.0" type="module"
 		integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
-	<script src="https://unpkg.com/stein-expedite@0.0.4/dist/index.js"></script>
-
-
 </body>
 
 </html>
