--- a/cart/cart.html
+++ b/cart/cart.html
@@ -12,7 +12,7 @@
 	</title>
 	<link rel="icon" href="../img/favicon.png" type="image/png" sizes="16x20" />
 	<link rel="stylesheet" href="../dependencies/bootstrap.min.css" />
-	<link rel="stylesheet" src="../styles/style.css" href="../../styles/style.css" />
+	<link rel="stylesheet" src="../styles/style.css" href="../styles/style.css" />
 	<script type="text/javascript" src="../dependencies/jquery.min.js"></script>
 </head>
 
